--- a/BarnaBabok/pom.xml
+++ b/BarnaBabok/pom.xml
@@ -23,6 +23,18 @@
       <version>5.4.4.Final</version>
     </dependency>
 
+    <!-- JavaFX -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>11</version>
+    </dependency>
+
     <!-- Database -->
     <dependency>
       <groupId>com.h2database</groupId>
